unpackaged/config/ofm/objects/Budget_Period__c/Budget_Period__c.object-meta.xml
<CustomObject>
    <description>Universal Budget grid column: one time window on a budget.</description>
    <label>Budget Period</label>
    <nameField>
        <label>Period Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Budget Periods</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>