unpackaged/config/ofm/objects/Budget_Period__c/fields/Budget__c.field-meta.xml
<CustomField>
    <fullName>Budget__c</fullName>
    <label>Budget</label>
    <referenceTo>Budget__c</referenceTo>
    <relationshipLabel>Budget Periods</relationshipLabel>
    <relationshipName>Budget_Periods</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
    <type>MasterDetail</type>
    <description>Parent budget this period belongs to; the Universal Budget grid renders one column per period.</description>
    <inlineHelpText>The budget this period belongs to.</inlineHelpText>
</CustomField>