unpackaged/config/ofm/objects/Budget_Period__c/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <label>End Date</label>
    <type>Date</type>
    <description>Period end; the Universal Budget grid shows the range in the column header details and reporting header.</description>
    <inlineHelpText>Last day of this budget period.</inlineHelpText>
</CustomField>