unpackaged/config/ofm/objects/Budget_Period__c/fields/Maximum_Funding_Amount__c.field-meta.xml
<CustomField>
    <fullName>Maximum_Funding_Amount__c</fullName>
    <label>Maximum Funding Amount</label>
    <defaultValue>0</defaultValue>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
    <description>Cap on this period's total; the Universal Budget grid flags amounts over the cap. 0 means no limit.</description>
    <inlineHelpText>Largest allowed total for this period. 0 = no limit.</inlineHelpText>
</CustomField>