unpackaged/config/ofm/objects/Budget_Period__c/fields/Maximum_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Maximum_Percentage__c</fullName>
    <label>Maximum Percentage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
    <description>Cap on this period's share of the total budget; the Universal Budget grid flags the period when exceeded. 0 means no limit.</description>
    <inlineHelpText>Largest allowed share of the total budget. 0 = no limit.</inlineHelpText>
</CustomField>