unpackaged/config/ofm/objects/Budget_Period__c/fields/Minimum_Funding_Amount__c.field-meta.xml
<CustomField>
    <fullName>Minimum_Funding_Amount__c</fullName>
    <label>Minimum Funding Amount</label>
    <defaultValue>0</defaultValue>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
    <description>Minimum total budgeted in this period; the Universal Budget grid flags the period until met. 0 means no minimum.</description>
    <inlineHelpText>Smallest allowed total for this period. 0 = no minimum.</inlineHelpText>
</CustomField>