unpackaged/config/ofm/objects/Budget_Period__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <label>Start Date</label>
    <type>Date</type>
    <description>Period start; the Universal Budget grid shows the range in the column header details and reporting header.</description>
    <inlineHelpText>First day of this budget period.</inlineHelpText>
</CustomField>